# splinecam

./: .gitignore  environment.yml  pyproject.toml  pyproject.toml.poetry.bak  train_cifar10.py  train_mnist.py  train_tinyimgnet.py
examples/: visualize_cnn_random.py  visualize_mlp_random.py
splinecam/: __init__.py  compute.py  global_config.py  graph.py  models.py  plot.py  utils.py  wrappers.py
tests/: test_cnn.py
